# ens-lead-generation-app

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Development Agent Implementation Prompt.md  Etch_N_Shine_Lead_Generation_App_BRD_FSD.md  Etch_N_Shine_Lead_Generation_App_Implementation_Kickoff.md  Etch_N_Shine_Lead_Generation_Architecture_Assessment.md  Etch_N_Shine_Solution_Architect_Review_Prompt.md  Etch_N_Shine_Universal_Application_Design_System.md  README.md  SECURITY.md  Start Etch N Shine.cmd  UX Audit and Redesign Proposal.md  package-lock.json  package.json  pyproject.toml
apps/backend/: pyproject.toml
apps/backend/app/: __init__.py  cli.py  main.py
apps/backend/app/api/: __init__.py  dependencies.py
apps/backend/app/api/routes/: automation.py  backups.py  campaigns.py  catalogue.py  health.py  leads.py  qualification.py  system.py  templates.py
apps/backend/app/core/: __init__.py  config.py  errors.py  logging.py  secrets.py
apps/backend/app/db/: __init__.py  migrations.py  models.py  session.py
apps/backend/app/domains/: __init__.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_initial_local_core.py  0002_local_crm_operations.py  0003_qualification_catalogue.py  0004_campaign_automation.py  0005_contact_social.py  0006_message_templates.py  0007_product_families.py  0008_template_product_families.py
apps/backend/tests/: conftest.py  test_backup_restore.py  test_campaign_automation.py  test_campaign_operations.py  test_lead_operations.py  test_local_core_flow.py  test_meta_instagram.py  test_product_families.py  test_public_registry_discovery.py  test_qualification_workflow.py  test_security_and_health.py  test_templates.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
(+118 files in other folders)
