[project]
name = "ens-lead-generation-backend"
version = "0.1.0"
description = "Local API and domain service for Etch 'N' Shine lead intelligence"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1"
]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pyinstaller>=6.12,<7",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1"
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
filterwarnings = [
  "error",
  "ignore:Using `httpx` with `starlette.testclient` is deprecated.*:UserWarning"
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "S"]

[tool.ruff.lint.per-file-ignores]
# `assert` is the standard pytest assertion idiom and tests never run under -O.
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations"]
