[package]
name = "ens-lead-generation-desktop"
version = "0.1.0"
description = "Etch 'N' Shine local lead intelligence desktop host"
authors = ["Etch 'N' Shine"]
edition = "2021"

[lib]
name = "ens_lead_generation_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
